Fixes wrong project name in direct test .project file. Fixes #785

--- a/tests/org.jboss.reddeer.direct.test/.project
+++ b/tests/org.jboss.reddeer.direct.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jboss.reddeer.swt.test</name>
+	<name>org.jboss.reddeer.direct.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
