--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
                 <module>features</module>
                 <module>site</module>
 		<module>archetype</module>
+		<module>product</module>
 	</modules>
 	
 	<build>
