Change target platform for archetype tests to Luna. #795

--- a/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
@@ -1,7 +1,7 @@
-package=foo.bar.myplugin.kepler
+package=foo.bar.myplugin.luna
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
-artifactId=kepler
+artifactId=luna
 tycho_version=0.18.1
-eclipse_platform=kepler
+eclipse_platform=luna
 reddeer_version=master
