--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -8,6 +8,35 @@
 	<artifactId>jboss-reddeer-archetype</artifactId>
 	<packaging>maven-archetype</packaging>
 	<name>Red Deer Archetype</name>
+
+	<description>Red Deer Archetype</description>
+	<url>https://github.com/jboss-reddeer/reddeer</url>
+
+	<licenses>
+		<license>
+			<name>Eclipse Public License, Version 1.0</name>
+			<distribution>repo</distribution>
+			<url>http://www.eclipse.org/org/documents/epl-v10.php</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git://github.com/jboss-reddeer/reddeer.git</connection>
+		<developerConnection>scm:git:git://github.com/jboss-reddeer/reddeer.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/jboss-reddeer/reddeer</url>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>rawagner</id>
+			<name>Rastislav Wagner</name>
+			<email>rawagner@redhat.com</email>
+			<organization>Red Hat</organization>
+			<organizationUrl>http://www.redhat.com</organizationUrl>
+		</developer>
+	</developers>
+
 	<build>
 		<extensions>
 			<extension>
@@ -29,7 +58,7 @@
 	</build>
 
 	<!-- For deployment of archetype to Nexus -->
-	<!--  Don't change "id" since it should match credentials entry in $M2_REPO/settings.xml -->
+	<!-- Don't change "id" since it should match credentials entry in $M2_REPO/settings.xml -->
 	<distributionManagement>
 		<snapshotRepository>
 			<id>jboss-snapshots-repository</id>
