--- a/tests/org.jboss.reddeer.requirements.test/pom.xml
+++ b/tests/org.jboss.reddeer.requirements.test/pom.xml
@@ -13,7 +13,9 @@
 	</parent>
 	
 	<properties>
-		<apache-tomcat-7.home>${project.build.directory}/apache-tomcat-7.0.56</apache-tomcat-7.home>
+		<apache-tomcat-7.version>7.0.56</apache-tomcat-7.version>
+		<apache-tomcat-7.mirror>http://archive.apache.org/dist/tomcat/tomcat-7/</apache-tomcat-7.mirror>
+		<apache-tomcat-7.home>${project.build.directory}/apache-tomcat-${apache-tomcat-7.version}</apache-tomcat-7.home>
 		<customArgLine>-Dreddeer.config=${basedir}/bin</customArgLine>
 	</properties>
 
@@ -83,8 +85,8 @@
 							<goal>wget</goal>
 						</goals>
 						<configuration>
-							<url>http://mirror.hosting90.cz/apache/tomcat/tomcat-7/v7.0.56/bin/apache-tomcat-7.0.56.zip</url>
-							<outputFileName>apache-tomcat-7.0.56.zip</outputFileName>
+							<url>${apache-tomcat-7.mirror}/v${apache-tomcat-7.version}/bin/apache-tomcat-${apache-tomcat-7.version}.zip</url>
+							<outputFileName>apache-tomcat-${apache-tomcat-7.version}.zip</outputFileName>
 							<unpack>true</unpack>
 						</configuration>
 					</execution>
