Disable automatic updates. #880

--- a/plugins/org.jboss.reddeer.eclipse/pom.xml
+++ b/plugins/org.jboss.reddeer.eclipse/pom.xml
@@ -11,4 +11,5 @@
                 <artifactId>plugins</artifactId>
 		<version>0.7.0-SNAPSHOT</version>
 	</parent>
+	<version>0.7.1-SNAPSHOT</version>
 </project>
