Implemented new tab to RedDeer launcher. Fixes #918.
- Implemented launcher
- Moved RedDeer exception from swt plugin to common plugin
- changed logDebug property in tests/pom.xml

--- a/plugins/org.jboss.reddeer.ui/plugin.xml
+++ b/plugins/org.jboss.reddeer.ui/plugin.xml
@@ -35,6 +35,17 @@
       </launchConfigurationTabGroup>
    </extension>
    
+    <extension point="org.eclipse.debug.ui.launchConfigurationTabs">
+    <tab
+      class="org.jboss.reddeer.eclipse.ui.launcher.RedDeerJUnitTab"
+      group="org.jboss.reddeer.eclipse.ui.launcher.JUnitTabGroup"
+      id="org.jboss.reddeer.eclipse.ui.launcher.JUnitTab"
+      name="Red Deer">
+      <placement after="org.eclipse.jdt.junit.JUnitLaunchConfigurationTab">
+      </placement>
+    </tab>
+  </extension>
+   
    <extension
          point="org.eclipse.debug.ui.launchConfigurationTypeImages">
       <launchConfigurationTypeImage
