Initial code generator #906

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -32,6 +32,7 @@
 		<module>org.jboss.reddeer.spy</module>
 		<module>org.jboss.reddeer.recorder</module>
 		<module>org.jboss.reddeer.branding</module>
+		<module>org.jboss.reddeer.generator</module>
 	</modules>
 	
 </project>
