--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -40,6 +40,7 @@
 		<module>org.jboss.reddeer.direct.test</module>
 		<module>org.jboss.reddeer.junit.test</module>
 		<module>org.jboss.reddeer.requirements.test</module>
+		<module>org.jboss.reddeer.generator.test</module>
 	</modules>
 	<build>
 		<plugins>
