Improve RedDeer IDE
- only reddeer exec is created
- add default Luna update site
- install GEF examples

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
 	  <profile>
 	    <id>product</id>
 	    <modules>
+	      <module>features/org.jboss.reddeer.ide.feature</module>
 	      <module>product</module>
 	    </modules>
 	  </profile>
