--- a/tests/org.jboss.reddeer.common.test/pom.xml
+++ b/tests/org.jboss.reddeer.common.test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>tests</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0</version>
 	</parent>
 
 	<build>
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.jboss.reddeer</groupId>
 			<artifactId>org.jboss.reddeer.common</artifactId>
-			<version>0.7.0-SNAPSHOT</version>
+			<version>0.7.0</version>
 			<type>eclipse-plugin</type>
 		</dependency>
 
