Update RedDeer version to 0.8.0-SNAPSHOT
0.7.0 is dead, long live 0.8.0.

This command was used to update the bundle ranges:
find . -iname MANIFEST.MF -ipath '*/META-INF/M*' |xargs perl -pi -e 's/\[0.7,0.8\)/[0.8,0.9)/'

--- a/tests/org.jboss.reddeer.common.test/pom.xml
+++ b/tests/org.jboss.reddeer.common.test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>tests</artifactId>
-		<version>0.7.0</version>
+		<version>0.8.0-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.jboss.reddeer</groupId>
 			<artifactId>org.jboss.reddeer.common</artifactId>
-			<version>0.7.0</version>
+			<version>0.8.0-SNAPSHOT</version>
 			<type>eclipse-plugin</type>
 		</dependency>
 
