Added RedDeer Spy view (fixes #742)

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>org.jboss.reddeer.eclipse.feature</module>
 		<module>org.jboss.reddeer.examples.feature</module>
+		<module>org.jboss.reddeer.gef.spy.feature</module>
 		<module>org.jboss.reddeer.rcp.feature</module>
 		<module>org.jboss.reddeer.swt.feature</module>
 		<module>org.jboss.reddeer.tests.feature</module>
