--- a/features/org.jboss.reddeer.gef.spy.feature/pom.xml
+++ b/features/org.jboss.reddeer.gef.spy.feature/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>org.jboss.reddeer.spy.feature</artifactId>
-	<name>RedDeer Spy</name>
+	<artifactId>org.jboss.reddeer.gef.spy.feature</artifactId>
+	<name>RedDeer GEF Spy</name>
 	<packaging>eclipse-feature</packaging>
-  
-  	<parent>
+	
+	<parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>features</artifactId>
 		<version>0.8.0-SNAPSHOT</version>
 	</parent>
-	
 	<build>
 		<plugins>
 			<plugin>
@@ -44,5 +43,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
+
 </project>
