--- a/plugins/org.jboss.reddeer.gef.spy/build.properties
+++ b/plugins/org.jboss.reddeer.gef.spy/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               resources/,\
                .,\
+               icons/
