--- a/plugins/org.jboss.reddeer.spy/pom.xml
+++ b/plugins/org.jboss.reddeer.spy/pom.xml
@@ -1,14 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+  
+ 	<parent>
+ 		<groupId>org.jboss.reddeer</groupId>
+ 		<artifactId>plugins</artifactId>
+ 		<version>0.8.0-SNAPSHOT</version>
+ 	</parent>
+ 	
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.jboss.reddeer.spy</artifactId>
-	<name>Red Deer Spy Component</name>
+	<name>RedDeer Spy</name>
 	<packaging>eclipse-plugin</packaging>
-
-	<parent>
-		<groupId>org.jboss.reddeer</groupId>
-                <artifactId>plugins</artifactId>
-		<version>0.8.0-SNAPSHOT</version>
-	</parent>
+	
 </project>
