RedDeer updated to use Eclipse Mars instead of Luna

--- a/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
@@ -1,7 +1,7 @@
-package=foo.bar.myplugin.luna
+package=foo.bar.myplugin.mars
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
-artifactId=luna
+artifactId=mars
 tycho_version=0.21.0
-eclipse_platform=luna
+eclipse_platform=mars
 reddeer_version=master
