--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
  	   	<tycho-version>0.22.0</tycho-version>  	  
 		<tychoExtrasVersion>${tycho-version}</tychoExtrasVersion>
-		<eclipse-target-site>http://download.eclipse.org/releases/luna</eclipse-target-site>
+		<eclipse-target-site>http://download.eclipse.org/releases/mars</eclipse-target-site>
 		<swtbot-update-site>http://download.eclipse.org/technology/swtbot/releases/2.2.1</swtbot-update-site>
 		<eclipse-orbit-update-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20150519210750/repository</eclipse-orbit-update-site>
 		<download-plugin-version>1.2.1</download-plugin-version>
