--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -30,6 +30,7 @@
 	
 	<modules>
 		<module>org.jboss.reddeer.common.test</module>
+		<module>org.jboss.reddeer.core.test</module>
 		<module>org.jboss.reddeer.swt.test</module>
 		<module>org.jboss.reddeer.workbench.test</module>
 		<module>org.jboss.reddeer.uiforms.test</module>
