Adds support for user profile. Fixes #803
Changes org.jboss.reddeer.common.test project to Eclipse plugin

Changes org.jboss.reddeer.junit.test project to Eclipse plugin

--- a/tests/org.jboss.reddeer.common.test/build.properties
+++ b/tests/org.jboss.reddeer.common.test/build.properties
@@ -3,5 +3,4 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about.html,\
-               plugin.xml
+               about.html
