--- a/tests/org.jboss.reddeer.common.test/pom.xml
+++ b/tests/org.jboss.reddeer.common.test/pom.xml
@@ -3,7 +3,8 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.jboss.reddeer.common.test</artifactId>
-	<name>Red Deer Common plugin Tests</name>
+	<name>Red Deer Common Component Tests</name>
+	<packaging>eclipse-test-plugin</packaging>
 
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
@@ -11,39 +12,4 @@
 		<version>0.8.0-SNAPSHOT</version>
 	</parent>
 
-	<build>
-		<testSourceDirectory>src</testSourceDirectory>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	
-	<dependencies>
-		<dependency>
-			<groupId>org.jboss.reddeer</groupId>
-			<artifactId>org.jboss.reddeer.common</artifactId>
-			<version>0.8.0-SNAPSHOT</version>
-			<type>eclipse-plugin</type>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.1</version>
-		</dependency>
-	</dependencies>
 </project>
