--- a/tests/org.jboss.reddeer.junit.test/build.properties
+++ b/tests/org.jboss.reddeer.junit.test/build.properties
@@ -3,5 +3,4 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about.html,\
-               plugin.xml
+               about.html
