Added snippets for documentation (fixes #1077)

--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,12 @@
 	</properties>
 	
 	<modules>
-                <module>plugins</module>
-                <module>tests</module>
-                <module>features</module>
-                <module>site</module>
+		<module>plugins</module>
+        <module>tests</module>
+		<module>features</module>
+		<module>site</module>
 		<module>archetype</module>
+		<module>snippets</module>
 	</modules>
 	
 	<build>
