--- a/features/org.jboss.reddeer.eclipse.feature/feature.properties
+++ b/features/org.jboss.reddeer.eclipse.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer Eclipse Testing Feature
+featureName=RedDeer Eclipse Feature
 
