--- a/features/org.jboss.reddeer.rcp.feature/feature.properties
+++ b/features/org.jboss.reddeer.rcp.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer RCP Testing (JFace and Workbench) Feature
+featureName=RedDeer RCP Feature
 
