--- a/features/org.jboss.reddeer.spy.feature/feature.properties
+++ b/features/org.jboss.reddeer.spy.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer Spy
+featureName=RedDeer Spy Feature
 
