--- a/features/org.jboss.reddeer.swt.feature/feature.properties
+++ b/features/org.jboss.reddeer.swt.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer SWT Testing Feature
+featureName=RedDeer SWT Feature
 
