--- a/features/org.jboss.reddeer.spy.feature/pom.xml
+++ b/features/org.jboss.reddeer.spy.feature/pom.xml
@@ -3,7 +3,7 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.jboss.reddeer.spy.feature</artifactId>
-	<name>RedDeer Spy</name>
+	<name>Red Deer Spy Feature</name>
 	<packaging>eclipse-feature</packaging>
   
   	<parent>
