--- a/plugins/org.jboss.reddeer.generator/plugin.xml
+++ b/plugins/org.jboss.reddeer.generator/plugin.xml
@@ -9,24 +9,12 @@
             id="org.jboss.reddeer.tools">
       </category>
       <view
-            name="Code Generator"
-            icon="icons/sample.gif"
+            name="RedDeer Code Generator"
+            icon="icons/reddeer_icon.png"
             category="org.jboss.reddeer.tools"
             class="org.jboss.reddeer.generator.views.CodeGeneratorView"
             id="org.jboss.reddeer.generator.views.CodeGeneratorView">
       </view>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.ProblemView"
-               relationship="right"
-               id="org.jboss.reddeer.generator.views.CodeGeneratorView">
-         </view>
-      </perspectiveExtension>
    </extension>
 
 </plugin>
