Group all RedDeer views into one category and use the same icon #1124

--- a/plugins/org.jboss.reddeer.gef.spy/plugin.xml
+++ b/plugins/org.jboss.reddeer.gef.spy/plugin.xml
@@ -10,7 +10,7 @@
       </category>
       <view
             name="RedDeer GEF Spy view"
-            icon="icons/sample.gif"
+            icon="icons/reddeer_icon.png"
             category="org.jboss.reddeer.tools"
             class="org.jboss.reddeer.gef.spy.view.GEFSpyView"
             id="org.jboss.reddeer.gef.spy.view.GEFSpyView">
