--- a/plugins/org.jboss.reddeer.spy/plugin.xml
+++ b/plugins/org.jboss.reddeer.spy/plugin.xml
@@ -3,9 +3,13 @@
 <plugin>
  <extension
          point="org.eclipse.ui.views">
+      <category
+            name="RedDeer Tools"
+            id="org.jboss.reddeer.tools">
+      </category>
       <view
             name="RedDeer Spy view"
-            category="org.jboss.reddeer.spy"
+            category="org.jboss.reddeer.tools"
             class="org.jboss.reddeer.spy.view.RedDeerSpyView"
             id="org.jboss.reddeer.spy.view.RedDeerSpyView"
             icon="resources/reddeer_icon.png">
