Alternative to swtbot.go #308

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -35,6 +35,7 @@
 		<module>org.jboss.reddeer.recorder</module>
 		<module>org.jboss.reddeer.branding</module>
 		<module>org.jboss.reddeer.generator</module>
+		<module>org.jboss.reddeer.go</module>
 	</modules>
 	
 </project>
