Add reference to Eclipse Orbit to resolve Mockito dep #1139
We already had Eclipse Orbit p2 repo added for build time,
but when you tried to install the RedDeer update site into Eclipse
there was a missing dependency - org.mockito version 1.9.5.
To solve this, I added a reference to the Eclipse Orbit site from
our site using repository-utils.

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -75,6 +75,29 @@
 					<includePacked>true</includePacked>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jboss.tools.tycho-plugins</groupId>
+				<artifactId>repository-utils</artifactId>
+				<executions>
+					<execution>
+						<id>generate-facade</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-repository-facade</goal>
+						</goals>
+						<configuration>
+							<associateSites>
+								<site>${eclipse-orbit-update-site}</site>
+							</associateSites>
+							<symbols>
+								<update.site.name>eclipse-orbit-update-site</update.site.name>
+								<update.site.description></update.site.description>
+							</symbols>
+							<removeDefaultCategory>true</removeDefaultCategory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	
