--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
         <parent>
@@ -37,6 +37,7 @@
 		<module>org.jboss.reddeer.generator</module>
 		<module>org.jboss.reddeer.go</module>
 		<module>org.jboss.reddeer.logparser</module>
-	</modules>
+		<module>org.jboss.reddeer.help</module>
+  </modules>
 	
 </project>
