JBIDE-20194 fix license, copyright, and provider-name

--- a/features/org.jboss.reddeer.logparser.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.jboss.reddeer.logparser.feature/sourceTemplateFeature/feature.properties
@@ -13,6 +13,12 @@
 # "%foo" in feature.xml corresponds to the key "foo" in this file
 # java.io.Properties file (ISO 8859-1 with "\" escapes)
 # This file should be translated.
-
 # "featureName" property - name of the feature
 featureName=RedDeer Log Parser Source Feature
+copyright=JBoss, Home of Professional Open Source
+Copyright (c) Red Hat, Inc., and individual contributors as indicated
+by the @authors tag, 2010 - 2015. See the copyright.txt in the distribution
+for a full listing of individual contributors.
+
+featureProvider=JBoss by Red Hat
+licenseURL=license.html
