--- a/features/org.jboss.reddeer.tests.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.jboss.reddeer.tests.feature/sourceTemplateFeature/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2010-2012 Red Hat, Inc. and others.
+# Copyright (c) 2010-2015 Red Hat, Inc. and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -13,7 +13,12 @@
 # "%foo" in feature.xml corresponds to the key "foo" in this file
 # java.io.Properties file (ISO 8859-1 with "\" escapes)
 # This file should be translated.
-
 # "featureName" property - name of the feature
 featureName=RedDeer Tests Source Feature
+copyright=JBoss, Home of Professional Open Source
+Copyright (c) Red Hat, Inc., and individual contributors as indicated
+by the @authors tag, 2010 - 2015. See the copyright.txt in the distribution
+for a full listing of individual contributors.
 
+featureProvider=JBoss by Red Hat
+licenseURL=license.html
