--- a/features/org.jboss.reddeer.ui.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.jboss.reddeer.ui.feature/sourceTemplateFeature/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2010-2012 Red Hat, Inc. and others.
+# Copyright (c) 2010-2015 Red Hat, Inc. and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -17,3 +17,11 @@
 # "featureName" property - name of the feature
 featureName=RedDeer UI Source Feature
 
+copyright=JBoss, Home of Professional Open Source
+Copyright (c) Red Hat, Inc., and individual contributors as indicated
+by the @authors tag, 2015. See the copyright.txt in the distribution
+for a full listing of individual contributors.
+
+featureProvider=JBoss by Red Hat
+
+licenseURL=license.html
