revert to using tycho-version = 0.22.0 because still building with JDK 7

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 	<packaging>pom</packaging>
 	
 	<properties>
-		<tycho-version>0.23.1</tycho-version>
+		<!-- when you're ready to move to building with JDK 8, you can move up to Tycho 0.23.1 -->
+		<tycho-version>0.22.0</tycho-version>
 		<tychoExtrasVersion>${tycho-version}</tychoExtrasVersion>
 		<jbossTychoPluginsVersion>0.23.1</jbossTychoPluginsVersion>
 		<eclipse-target-site>http://download.eclipse.org/releases/mars</eclipse-target-site>
