Update RD features. Fixes #1148

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -27,6 +27,7 @@
 		<module>org.jboss.reddeer.spy.feature</module>
 		<module>org.jboss.reddeer.logparser.feature</module>
 		<module>org.jboss.reddeer.help.feature</module>
+		<module>org.jboss.reddeer.selenium.feature</module>
 	</modules>
 	
 </project>
