--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -13,10 +13,10 @@
 	<packaging>pom</packaging>
 	
 	<properties>
- 		<reddeer.close.shells>true</reddeer.close.shells>
- 		<reddeer.close.welcome.screen>true</reddeer.close.welcome.screen>
- 		<reddeer.disable.maven.download.repo.index.on.startup>true</reddeer.disable.maven.download.repo.index.on.startup>
-		<junitExtensionsProperties>-Dreddeer.close.shells=${reddeer.close.shells} -Dreddeer.close.welcome.screen=${reddeer.close.welcome.screen} -Dreddeer.disable.maven.download.repo.index.on.startup=${reddeer.disable.maven.download.repo.index.on.startup}</junitExtensionsProperties>
+ 		<rd.closeShells>true</rd.closeShells>
+ 		<rd.closeWelcomeScreen>true</rd.closeWelcomeScreen>
+ 		<rd.disableMavenIndex>true</rd.disableMavenIndex>
+		<junitExtensionsProperties>-Drd.closeShells=${rd.closeShells} -Drd.closeWelcomeScreen=${rd.closeWelcomeScreen} -Drd.disableMavenIndex=${rd.disableMavenIndex}</junitExtensionsProperties>
 		<!-- placeholder for properties of RedDeer JUnit extensions -->
 		<platformSystemProperties></platformSystemProperties>
 		<customArgLine></customArgLine>
